# rapidlog

./: .gitignore  ADOPTION_STRATEGY.md  CICD_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GO_TO_MARKET_STRATEGY.md  LAUNCH_SUMMARY.md  LICENSE  PACKAGE_NAMING.md  README.md  benchmark_enhanced.py  benchmark_logging.py  benchmark_persisted_logging.py  fastlog.py  pyproject.toml  rapidlog.py  requirements.txt  test_fastlog.py  test_presets_simple.py  test_rapidlog.py
.github/: pull_request_template.md
.github/workflows/: benchmark.yml  lint.yml  publish.yml  test.yml
scripts/: set_package_version.py
